[gd_scene load_steps=93 format=2]

[ext_resource path="res://images/sonne.png" type="Texture" id=1]
[ext_resource path="res://images/Berge.png" type="Texture" id=2]
[ext_resource path="res://images/Himmel wolkenlos.png" type="Texture" id=3]
[ext_resource path="res://Bunny.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/00 - sounds - up.ogg" type="AudioStream" id=5]
[ext_resource path="res://images/Pixel Adventure 2/Enemies/Skull/Orange Particle.png" type="Texture" id=6]
[ext_resource path="res://Stage1.gd" type="Script" id=7]
[ext_resource path="res://Orange Particle.gd" type="Script" id=8]
[ext_resource path="res://fonts/Fredoka_One/Fredoka-40.tres" type="DynamicFont" id=9]
[ext_resource path="res://Terrain.tres" type="TileSet" id=10]
[ext_resource path="res://images/Pixel Adventure 1/Items/Fruits/Cherries.png" type="Texture" id=11]
[ext_resource path="res://images/Pixel Adventure 1/Items/Fruits/Bananas.png" type="Texture" id=12]
[ext_resource path="res://images/Pixel Adventure 1/Items/Fruits/Apple.png" type="Texture" id=13]
[ext_resource path="res://images/Pixel Adventure 1/Items/Fruits/Kiwi.png" type="Texture" id=14]
[ext_resource path="res://Fruit.gd" type="Script" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Lauf"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 5, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.4, 0.4 ), Vector2( 0.5, 0.5 ), Vector2( 0.4, 0.4 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 5, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 400 ), Vector2( 200, 228 ), Vector2( 483.5, 74 ), Vector2( 780, 233.8 ), Vector2( 987, 400 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Dunkler"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.155121 ), Vector2( 0, -400 ), Vector2( 0, -7.79495 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 544.245, 7.77618 )

[sub_resource type="CircleShape2D" id=4]
radius = 16.8903

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=23]
radius = 8.0

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=59]
animations = [ {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=77]
animations = [ {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Wurzel" type="Node"]
script = ExtResource( 7 )

[node name="Bunny" parent="." instance=ExtResource( 4 )]
MAX_GROUND_SPEED = null
ACCEL = null
GROUND_FRICTION = null
GRAVITY = null
jump_power = null
score = null

[node name="sonne" type="Sprite" parent="."]
position = Vector2( 987, 400 )
scale = Vector2( 0.3, 0.3 )
z_index = -95
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="sonne"]
autoplay = "Lauf"
playback_speed = 0.2
anims/Lauf = SubResource( 1 )

[node name="Berge" type="Sprite" parent="."]
position = Vector2( 0, -400 )
scale = Vector2( 0.514022, 0.514022 )
z_index = -90
texture = ExtResource( 2 )
centered = false

[node name="Himmel wolkenlos" type="Sprite" parent="."]
position = Vector2( 0, 1.43051e-06 )
scale = Vector2( 0.514022, 0.514022 )
z_index = -99
texture = ExtResource( 3 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Himmel wolkenlos"]
autoplay = "Dunkler"
playback_speed = 0.2
anims/Dunkler = SubResource( 2 )

[node name="Boden" type="StaticBody2D" parent="."]
position = Vector2( 0, 580 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boden"]
position = Vector2( 523.382, 0 )
shape = SubResource( 3 )

[node name="Orange Particle" type="Sprite" parent="."]
position = Vector2( 634.155, 427.203 )
texture = ExtResource( 6 )
script = ExtResource( 8 )

[node name="OrangeArea" type="Area2D" parent="Orange Particle"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orange Particle/OrangeArea"]
shape = SubResource( 4 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="Orange Particle"]
position = Vector2( -634.155, -427.203 )
stream = ExtResource( 5 )
max_distance = 700.0

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.785
anchor_right = 0.977
margin_top = 66.5218
margin_bottom = 164.522
custom_fonts/font = ExtResource( 9 )
text = "Score"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 851991, 0, 1, 851992, 0, 1, 851993, 0, 1, 852015, 0, 1, 852016, 0, 1, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 0, 1179657, 2, 0, 1179658, 2, 0, 1179659, 2, 0, 1179660, 2, 0, 1310753, 0, 0, 1310754, 0, 1, 1310755, 0, 1, 1310756, 0, 1, 1310757, 0, 1, 1310758, 0, 1, 1310759, 0, 1, 1310760, 0, 2, 1376289, 0, 65540, 1376290, 0, 65537, 1376291, 0, 4, 1376292, 0, 4, 1376293, 0, 4, 1376294, 0, 65537, 1376295, 0, 4, 1376296, 0, 65538, 1441825, 0, 131072, 1441826, 0, 131073, 1441827, 0, 131073, 1441828, 0, 131073, 1441829, 0, 131073, 1441830, 0, 131073, 1441831, 0, 131073, 1441832, 0, 131074, 1703948, 1, 0, 1703949, 1, 1, 1703950, 1, 1, 1703951, 1, 1, 1703952, 1, 2, 1769484, 1, 65540, 1769485, 1, 65537, 1769486, 1, 65537, 1769487, 1, 65537, 1769488, 1, 65538, 1835020, 1, 131072, 1835021, 1, 131073, 1835022, 1, 131073, 1835023, 1, 131073, 1835024, 1, 131074, 1900593, 1, 0, 1900594, 1, 1, 1900595, 1, 1, 1900596, 1, 2, 1966129, 1, 65540, 1966130, 1, 65537, 1966131, 1, 65537, 1966132, 1, 65539, 2031641, 0, 1, 2031642, 0, 1, 2031643, 0, 1, 2031644, 0, 1, 2031665, 1, 131072, 2031666, 1, 131073, 2031667, 1, 131073, 2031668, 1, 131074, 2359296, 0, 1, 2359297, 0, 1, 2359298, 0, 1, 2359299, 0, 1, 2359300, 0, 1, 2359301, 0, 1, 2359302, 0, 1, 2359303, 0, 1, 2359304, 0, 1, 2359305, 0, 1, 2359306, 0, 1, 2359307, 0, 1, 2359308, 0, 1, 2359309, 0, 1, 2359310, 0, 1, 2359311, 0, 1, 2359312, 0, 1, 2359313, 0, 1, 2359314, 0, 1, 2359315, 0, 1, 2359316, 0, 1, 2359317, 0, 1, 2359318, 0, 1, 2359319, 0, 1, 2359320, 0, 1, 2359321, 0, 1, 2359322, 0, 1, 2359323, 0, 1, 2359324, 0, 1, 2359325, 0, 1, 2359326, 0, 1, 2359327, 0, 1, 2359328, 0, 1, 2359329, 0, 1, 2359330, 0, 1, 2359331, 0, 1, 2359332, 0, 1, 2359333, 0, 1, 2359334, 0, 1, 2359335, 0, 1, 2359336, 0, 1, 2359337, 0, 1, 2359338, 0, 1, 2359339, 0, 1, 2359340, 0, 1, 2359341, 0, 1, 2359342, 0, 1, 2359343, 0, 1, 2359344, 0, 1, 2359345, 0, 1, 2359346, 0, 1, 2359347, 0, 1, 2359348, 0, 1, 2359349, 0, 1, 2359350, 0, 1, 2359351, 0, 1, 2359352, 0, 1, 2359353, 0, 1, 2359354, 0, 1, 2359355, 0, 1 )

[node name="TimeHBox" type="HBoxContainer" parent="."]
margin_left = 32.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 165.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabelSec" type="Label" parent="TimeHBox"]
margin_right = 96.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 9 )
text = "Secs.
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabelFrac" type="Label" parent="TimeHBox"]
margin_left = 100.0
margin_right = 188.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 9 )
text = "Frac
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fruits" type="Node" parent="."]

[node name="Cherry" type="AnimatedSprite" parent="Fruits"]
position = Vector2( 112, 416 )
scale = Vector2( 2, 2 )
frames = SubResource( 22 )
frame = 10
playing = true
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="Fruits/Cherry"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fruits/Cherry/Area2D"]
shape = SubResource( 23 )

[node name="Apple" type="AnimatedSprite" parent="Fruits"]
position = Vector2( 768, 112 )
scale = Vector2( 2, 2 )
frames = SubResource( 41 )
frame = 5
playing = true
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="Fruits/Apple"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fruits/Apple/Area2D"]
visible = false
shape = SubResource( 23 )

[node name="Banana" type="AnimatedSprite" parent="Fruits"]
position = Vector2( 400, 336 )
scale = Vector2( 2, 2 )
frames = SubResource( 59 )
frame = 10
playing = true
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="Fruits/Banana"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fruits/Banana/Area2D"]
visible = false
shape = SubResource( 23 )

[node name="Kiwi" type="AnimatedSprite" parent="Fruits"]
position = Vector2( 560, 176 )
scale = Vector2( 2, 2 )
frames = SubResource( 77 )
frame = 9
playing = true
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="Fruits/Kiwi"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fruits/Kiwi/Area2D"]
visible = false
shape = SubResource( 23 )
[connection signal="ready" from="." to="." method="_on_Wurzel_ready"]
[connection signal="score_changed" from="Bunny" to="." method="_on_Bunny_score_changed"]
[connection signal="body_entered" from="Orange Particle/OrangeArea" to="Orange Particle" method="_on_OrangeArea_body_entered"]
[connection signal="finished" from="Orange Particle/AudioPlayer" to="Orange Particle" method="_on_AudioPlayer_finished"]
[connection signal="body_entered" from="Fruits/Cherry/Area2D" to="Fruits/Cherry" method="_on_Fruit_entered"]
[connection signal="body_entered" from="Fruits/Apple/Area2D" to="Fruits/Apple" method="_on_Fruit_entered"]
[connection signal="body_entered" from="Fruits/Banana/Area2D" to="Fruits/Banana" method="_on_Fruit_entered"]
[connection signal="body_entered" from="Fruits/Kiwi/Area2D" to="Fruits/Kiwi" method="_on_Fruit_entered"]
